--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,11 +44,10 @@ div.currentWeather h3 {
     font-size: 1.3rem;
     margin: 10px;
 }
-
-span#uv-index {
-    color: white;
+.uv-text {
+    background-color: white;
+    color: black;   
 }
-
 div.fiveDay h2 {
     font-size: 1.2rem;
 }
